{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 132,
  "lineage": "5016ae60-3f8b-d594-b9da-e6fca7dc6c07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fe3c5a6c58db839",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0c62c4ac6054e5b85",
            "domain": "vpc",
            "id": "eipalloc-03fe3c5a6c58db839",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0033ef6ecd0bde7cc",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-216-230-197.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.230.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.opensrch-gateway",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.opensrch-subnet-1",
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:818836127373:instance/i-07822c5a178384e65",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07822c5a178384e65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "opensearch-access-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0033ef6ecd0bde7cc"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0033ef6ecd0bde7cc",
            "private_dns": "ip-10-0-1-50.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "54.216.230.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075929b3de3b1a610",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0435c7cbcc394adcd",
            "tags": {
              "Name": "ubuntu-server-opensearch"
            },
            "tags_all": {
              "Name": "ubuntu-server-opensearch"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d76f6f2a2be20684"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.opensrch-subnet-1",
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "opensrch-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:internet-gateway/igw-0cd404470efba244f",
            "id": "igw-0cd404470efba244f",
            "owner_id": "818836127373",
            "vpc_id": "vpc-0b895ff3271c0a7e3"
          },
          "dependencies": [
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:network-interface/eni-0033ef6ecd0bde7cc",
            "id": "eni-0033ef6ecd0bde7cc",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3d:02:1e:52:9b",
            "owner_id": "818836127373",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d76f6f2a2be20684"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0435c7cbcc394adcd"
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_subnet.opensrch-subnet-1",
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "opensrch-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:route-table/rtb-0f3b90b1f4fb15047",
            "id": "rtb-0f3b90b1f4fb15047",
            "owner_id": "818836127373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd404470efba244f",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cd404470efba244f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "opensearch-route-gateway"
            },
            "tags_all": {
              "Name": "opensearch-route-gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b895ff3271c0a7e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.opensrch-gateway",
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "opensrch-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b07b2bf3005a19de",
            "route_table_id": "rtb-0f3b90b1f4fb15047",
            "subnet_id": "subnet-0435c7cbcc394adcd"
          },
          "dependencies": [
            "aws_internet_gateway.opensrch-gateway",
            "aws_route_table.opensrch-route-table",
            "aws_subnet.opensrch-subnet-1",
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:security-group/sg-0d76f6f2a2be20684",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d76f6f2a2be20684",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "818836127373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b895ff3271c0a7e3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "opensrch-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:subnet/subnet-0435c7cbcc394adcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0435c7cbcc394adcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "818836127373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "opensearch-subnet-1"
            },
            "tags_all": {
              "Name": "opensearch-subnet-1"
            },
            "vpc_id": "vpc-0b895ff3271c0a7e3"
          },
          "dependencies": [
            "aws_vpc.opensrch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "opensrch-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:818836127373:vpc/vpc-0b895ff3271c0a7e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-093b73e82f42d3d55",
            "default_route_table_id": "rtb-0ae645d2a20f97d94",
            "default_security_group_id": "sg-0b5575025a47d81ae",
            "dhcp_options_id": "dopt-0c3ec909fc96acc7c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b895ff3271c0a7e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae645d2a20f97d94",
            "owner_id": "818836127373",
            "tags": {
              "Name": "opensearch-test"
            },
            "tags_all": {
              "Name": "opensearch-test"
            }
          }
        }
      ]
    }
  ]
}